--- a/Css/style.css
+++ b/Css/style.css
@@ -278,6 +278,7 @@ h1, h2, h3, h4, h5, h6 {
 /* Nav Meu Container */
 #nav-menu-container {
   float: right;
+  position: fixed !important;
   margin: 0;
 }
 
@@ -487,50 +488,50 @@ body.mobile-nav-active #mobile-nav-toggle {
   color: #999;
 }
 
-/* About Us Section
+/* infos Us Section
 --------------------------------*/
-#about {
+#info {
   background: #fff;
   padding: 80px 0;
 }
 
-#about .about-container .background {
+#info .infos-container .background {
   min-height: 300px;
-  background: url(../img/about-img.jpg) center top no-repeat;
+  background: url(../img/infos-img.png) center top no-repeat;
   margin-bottom: 10px;
 }
 
-#about .about-container .content {
+#info .infos-container .content {
   background: #fff;
 }
 
-#about .about-container .title {
+#info .infos-container .title {
   color: #333;
   font-weight: 700;
   font-size: 32px;
 }
 
 @media (max-width: 768px) {
-  #about .about-container .title {
+  #info .infos-container .title {
     padding-top: 15px;
   }
 }
 
-#about .about-container p {
+#info .infos-container p {
   line-height: 26px;
 }
 
-#about .about-container p:last-child {
+#info .infos-container p:last-child {
   margin-bottom: 0;
 }
 
-#about .about-container .icon-box {
+#info .infos-container .icon-box {
   background: #fff;
   background-size: cover;
   padding: 0 0 30px 0;
 }
 
-#about .about-container .icon-box .icon {
+#info .infos-container .icon-box .icon {
   float: left;
   background: #fff;
   width: 64px;
@@ -544,12 +545,12 @@ body.mobile-nav-active #mobile-nav-toggle {
   border: 2px solid #2dc997;
 }
 
-#about .about-container .icon-box .icon i {
+#info .infos-container .icon-box .icon i {
   color: #2dc997;
   font-size: 24px;
 }
 
-#about .about-container .icon-box .title {
+#info .infos-container .icon-box .title {
   margin-left: 80px;
   font-weight: 500;
   margin-bottom: 5px;
@@ -557,11 +558,11 @@ body.mobile-nav-active #mobile-nav-toggle {
   text-transform: uppercase;
 }
 
-#about .about-container .icon-box .title a {
+#info .infos-container .icon-box .title a {
   color: #111;
 }
 
-#about .about-container .icon-box .description {
+#info .infos-container .icon-box .description {
   margin-left: 80px;
   line-height: 24px;
   font-size: 14px;
@@ -664,13 +665,13 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 /* Infos Section
 --------------------------------*/
-#Infos {
+#infos {
   background: #fff;
   background-size: cover;
   padding: 80px 0 60px 0;
 }
 
-#Infos .box {
+#infos .box {
   padding: 50px 20px;
   margin-bottom: 50px;
   text-align: center;
@@ -680,7 +681,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   background: #fafafa;
 }
 
-#Infos .icon {
+#infos .icon {
   position: absolute;
   top: -36px;
   left: calc(50% - 36px);
@@ -697,40 +698,40 @@ body.mobile-nav-active #mobile-nav-toggle {
   background: #2dc997;
 }
 
-#Infos .icon a {
+#infos .icon a {
   display: inline-block;
 }
 
-#Infos .icon i {
+#infos .icon i {
   color: #fff;
   font-size: 24px;
 }
 
-#Infos .box:hover .icon {
+#infos .box:hover .icon {
   background: #fff;
   border: 2px solid #2dc997;
 }
 
-#Infos .box:hover .icon i {
+#infos .box:hover .icon i {
   color: #2dc997;
 }
 
-#Infos .box:hover .icon a {
+#infos .box:hover .icon a {
   color: #2dc997;
 }
 
-#Infos .title {
+#infos .title {
   font-weight: 700;
   font-size: 18px;
   margin-bottom: 15px;
   text-transform: uppercase;
 }
 
-#Infos .title a {
+#infos .title a {
   color: #111;
 }
 
-#Infos .description {
+#infos .description {
   font-size: 14px;
   line-height: 24px;
 }
