--- a/Css/style.css
+++ b/Css/style.css
@@ -279,6 +279,7 @@ h1, h2, h3, h4, h5, h6 {
 #nav-menu-container {
   float: right;
   position: fixed !important;
+  right: 100px;
   margin: 0;
 }
 
@@ -497,7 +498,6 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #info .infos-container .background {
   min-height: 300px;
-  background: url(../img/infos-img.png) center top no-repeat;
   margin-bottom: 10px;
 }
 
